--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 					### für den
 					<!-- ![Gameboy Logo](img/gameboy.png) -->
-					![Gameboy Logo](img/gameboy-removebg-preview.png)
+					![Gameboy Logo](img/gameboy.png)
 					</textarea>
 				</section>
 				<section data-markdown>
@@ -210,10 +210,21 @@
 					**Schritt 3: Sprite erstellen und laden**
 
 					<div class="img-container">
-						<img src="img/GameboyTileDesigner.png" alt="Gameboy Tile Designer" style="max-width: 100%; height: auto;">
-						<img src="img/SpriteLoaded.png" alt="Gameboy Tile Designer 2" style="max-width: 100%; height: auto;">
+						<img src="img/GameboyTileDesigner.png" style="max-width: 100%; height: auto;">
+						<img src="img/SpriteLoaded.png" style="max-width: 100%; height: auto;">
 					</div>
 
+					</textarea>
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					**Wie funktionieren Tiles?**
+					<div class="img-container">
+						<img src="img/tiles.png" style="max-width: 100%; height: auto;">
+						<img src="img/bits.png" style="max-width: 100%; height: auto;">
+					
+					</div>
 					</textarea>
 				</section>
 
@@ -246,6 +257,18 @@
 						}
 						```
 					</textarea>
+
+				</section>
+
+				<section data-markdown>
+					<textarea data-template>
+					**Schritt 4: Auswahl eines Haustieres**
+					<div class="img-container">
+					<img src="img/SelectAPet.png" style="max-width: 100%; height: auto;">
+					<img src="img/finalSelect.png" style="max-width: 100%; height: auto;">
+					</div>
+					</textarea>
+				</section>
 
 			</div>
 		</div>
@@ -291,6 +314,8 @@
 
 .img-container {
 	display: flex;
+	justify-content: center;
+	flex-wrap: space-between;
 
 
 }
